Fix alignmnet issues and add 3D effect for text

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -70,16 +70,18 @@ body {
       font-size: 3rem;
       color: #f7cf05;
       font-family: 'Press Start 2P', cursive;
+      text-shadow: 2px 2px 4px #000;
     }
 
     .level-title {
       line-height: 1.5;
       color: #948b0a;
       font-family: 'Press Start 2P', cursive;
+      text-shadow: 2px 2px 4px #000;
     }
 
     .button-container {
-      margin: auto 38px;
+      margin: 38px auto;
     }
 
     .pushable {
@@ -233,6 +235,7 @@ body {
         color: #f7cf05;
         font-family: 'Press Start 2P', cursive;
         padding: 10px 20px;
+        text-shadow: 2px 2px 4px #000;
       }
     }    
 
